# DengAI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_notebook.sh  submission.csv
myproject/: base.py  main.ipynb  prophet_model.py  run.py  sarimax.py
myproject/utils/: utils.py
notebooks/: test_notebook_prophet.ipynb  test_notebook_sarimax.ipynb
