[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = [
    "Linlin Cheng <linlin.cheng@nyu.edu>",
]
description = "Model pipeline for DengAI challenge."
name = "myproject"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
pandas = "1.5.0"
numpy = "1.23.3"
scikit-learn = "1.1.2"
types-PyYAML = "6.0.12"
matplotlib = "3.6.0"
pillow = "9.0.0"
flashtext = "2.7"
plotly-express = "0.4.1"
types-requests = "2.28.11"
types-python-dateutil = "2.8.19"
prefetch_generator = "1.0.1"
dill = "0.3.6"
black = { version = "*", extras = ["jupyter"] }
mypy = "*"
pylint = "*"
types-pkg-resources = "^0.1.3"
types-six = "^1.0.0"
pandas-stubs = "^1.2.0"
jedi = "0.17.2"
seaborn = "^0.11.2"
pandarallel = "^1.5.4"
prophet = "*"

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "invalid-name",
    "missing-module-docstring",
    "too-few-public-methods",
    "import-error",
    "duplicate-code",
    "too-many-locals",
    "too-many-arguments"
]
